{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Deceived",
            "id": "8a886741-6d69-46ff-81a1-f14cd1df9986",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "f114cda7-0dd0-45be-a113-e87cdf6b02e4",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "4856e352-6856-43c5-bdcf-9d8abf723af2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "d2d6dbdf-7e0a-41c9-8c7a-43296e42a235",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9eba1b44-dfd0-4c18-9681-8704c465e7ba",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "565c60a2-a8d4-42b6-939e-18e80594c8ea",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03bef1d8-1998-42b0-89dc-4e4c19f99867",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press(pressPoint=0.1,behavior=2)",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox",
            "bindingGroup": "Xbox",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}